# SECBOT

./: README.md
.metadata/: .log4j.xml  .log4j2.xml  version.ini
firmware/S-node final/: .cproject  .mxproject  .project  S-node final.ioc
legacy_projects/ABCD/: .cproject  .project  ABCD.ioc
legacy_projects/ANALYZER/: .project  ANALYZER.ioc
legacy_projects/ATcommand/: .cproject  .mxproject  .project  ATcommand.ioc
legacy_projects/Encoder/: .cproject  .mxproject  .project  Encoder Debug.launch  Encoder.ioc  STM32G030C8TX_FLASH.ld
legacy_projects/End_node/: .cproject  .mxproject  .project  End_node Debug.launch  End_node.ioc
legacy_projects/OpenMV/: .cproject  .mxproject  .project  OpenMV Debug.launch  OpenMV.ioc
legacy_projects/PWM generation/: .cproject  .mxproject  .project  PWM generation.ioc
legacy_projects/Pigweed/: .cproject  .project  CMakeLists.txt  Pigweed.ioc
legacy_projects/Pigweed/Core/Src/: main.cpp  stm32f4xx_hal_msp.c
legacy_projects/Pigweed/pigweed/pw_allocator/: unique_ptr.cc
legacy_projects/Pigweed/pigweed/pw_allocator/size_report/: libc_allocator.cc
legacy_projects/Pigweed/pigweed/pw_build/: target_types.gni
legacy_projects/Pigweed/pigweed/pw_libcxx/: BUILD.bazel
legacy_projects/Pigweed/pigweed/pw_log_basic/: Android.bp
legacy_projects/Pigweed/pigweed/pw_sensor/: BUILD.gn  sensor.yaml
legacy_projects/Pigweed/pigweed/pw_spi/: Android.bp
legacy_projects/Receive data/: .cproject  .mxproject  .project  Receive data Debug.launch  Receive data.ioc
legacy_projects/S-NODE/: .cproject  .mxproject  .project  S-NODE.ioc
(+602 files in other folders)
